<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.SignUpUserInfoFragment">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingVertical="12dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:hint="@string/prompt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:visibility="gone"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:paddingVertical="12dp"
        android:text=""
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInfoTextView" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingVertical="12dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />


    <TextView
        android:id="@+id/pwInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingHorizontal="3dp"
        android:maxLines="3"
        android:text="비밀번호는 대소문자 영문, 숫자, 특수기호를 포함한 8자 이상이어야 합니다."
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />



    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="회원가입"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwInfoTextView" />

    <Button
        android:id="@+id/goToConform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="가입했는데 인증이 되지 않았어요!"
        android:textSize="16sp"
        android:backgroundTint="@color/main_orange"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:maxLines="2"
        android:text="인증되지 않은 경우, 상단의 회원 정보를 입력한 후\n 주황색 버튼을 눌러주세요."
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/goToConform"
        app:layout_constraintStart_toStartOf="@+id/goToConform"
        app:layout_constraintTop_toBottomOf="@+id/goToConform" />
</androidx.constraintlayout.widget.ConstraintLayout>